add page connexion integration

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+  	<meta charset="UTF-8">
+    	<title><%= title %></title>
+		<title>Connexion</title>
+    <link rel='stylesheet' href='/stylesheets/stylePageConnexion.css' />
+    <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
   </head>
+
+
   <body>
-  qsd
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+    <h1 class='titreLogo'> Pimp My road <h1>
+        <div class="wrapper">
+          <form class="connexion-form-signin">       
+            <h2 class="connexion-form-signin-heading">Connexion</h2>
+              <input type="text" class="form-control" name="username" placeholder="Adresse mail" required="" autofocus="" />
+              <input type="password" class="form-control" name="password" placeholder="Mots de passe" required=""/>      
+              <label class="connexion-checkbox">
+                <input type="checkbox" value="remember-me" id="connexionrememberMe" name="rememberMe"> Se souvenir de moi
+              </label>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>   
+          </form>
+        </div>
   </body>
 </html>
+
+
+ 
+
+  
+
+
+
