--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -12,19 +12,19 @@
     <title>Pimp my road </title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel='stylesheet' href='/stylesheets/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='/components/bootstrap/dist/css/bootstrap.min.css'>
 
     <!-- MetisMenu CSS -->
-    <link rel='stylesheet' href='/stylesheets/metisMenu/bootstrap.min.css'>
+    <link rel='stylesheet' href='/components/metisMenu/dist/metisMenu.min.css'>
 
     <!-- Custom CSS -->
-    <link rel='stylesheet' href='/stylesheets/css/sb-admin-2.css'>
+    <link rel='stylesheet' href='/stylesheets/sb-admin-2.css'>
 
     <!-- Morris Charts CSS -->
-    <link rel='stylesheet' href='/stylesheets/js/morrisjs/morris.css'>
+    <link rel='stylesheet' href='/components/morris.js/morris.css'>
 
     <!-- Custom Fonts -->
-    <link rel='stylesheet' href='/stylesheets/font-awesome/css/font-awesome.min.css' type="text/css">
+    <link rel='stylesheet' href='/components/font-awesome/css/font-awesome.min.css' type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -916,22 +916,20 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script rel='stylesheet' href='/stylesheets/jquery/jquery.min.js'></script>
+    <script type="text/javascript" href='/components/jquery/dist/jquery.min.js'></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script rel='stylesheet' href='/stylesheets/js/bootstrap.min.js'></script>
+    <script type="text/javascript" href='/components/bootstrap/dist/js/bootstrap.min.js'></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script rel='stylesheet' href='/stylesheets/metisMenu/metisMenu.min.js'></script>
+    <script type="text/javascript" href='/components/metisMenu/dist/metisMenu.min.js'></script>
 
     <!-- Morris Charts JavaScript -->
-    <script rel='stylesheet' href='/stylesheets/raphael/raphael.min.js'></script>
-    <script rel='stylesheet' href='/stylesheets/morrisjs/morris.min.js'></script>
-
-    <script rel='stylesheet' href='/data/morris-data.js'></script>
+    <script type="text/javascript" href='/components/raphael/raphael.min.js'></script>
+    <script type="text/javascript" href='/components/morrisjs/morris.min.js'></script>
 
     <!-- Custom Theme JavaScript -->
-    <script rel='stylesheet' href='/stylesheets/js/sb-admin-2.js'></script>
+    <script type="text/javascript" href='/js/sb-admin-2.js'></script>
 
 </body>
 
