--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
   	<meta charset="UTF-8">
     	<title><%= title %></title>
 		<title>Connexion</title>
-    <link rel='stylesheet' href='/stylesheets/css/stylePageConnexion.css' />
+    <link rel='stylesheet' href='/stylesheets/stylePageLogin.css' />
     <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
   </head>
 
@@ -15,14 +15,17 @@
         <div class="wrapper">
           <form class="connexion-form-signin">       
             <h2 class="connexion-form-signin-heading">Connexion</h2>
-              <input type="text" class="form-control" name="username" placeholder="Adresse mail" required="" autofocus="" />
+              <input type="text" class="form-control" name="username" placeholder="Adresse mail ou identifiant" required="" autofocus="" />
               <input type="password" class="form-control" name="password" placeholder="Mots de passe" required=""/>      
               <label class="connexion-checkbox">
                 <input type="checkbox" value="remember-me" id="connexionrememberMe" name="rememberMe"> Se souvenir de moi
               </label>
               <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>   
+
           </form>
+          <a class='lienCreationCompte' href="/creationCompte" target="_blank"> Inscription </a>
         </div>
+        
   </body>
 </html>
 
