--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
 
   <body>
 
-    <h1 class='titreLogo'> Pimp My road <h1>
+    <h1 class='titreLogo'> Pimp My road </h1>
         <div class="wrapper">
           <form class="connexion-form-signin">       
             <h2 class="connexion-form-signin-heading">Connexion</h2>
@@ -21,9 +21,9 @@
                 <input type="checkbox" value="remember-me" id="connexionrememberMe" name="rememberMe"> Se souvenir de moi
               </label>
               <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>   
-
+              <a class='lienCreationCompte' href="/creationCompte" target="_blank"> Inscription </a>
           </form>
-          <a class='lienCreationCompte' href="/creationCompte" target="_blank"> Inscription </a>
+          
         </div>
         
   </body>
