--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -254,6 +254,12 @@
     <!-- Custom Theme JavaScript -->
     <script type="text/javascript" src='/js/sb-admin-2.js'></script>
     <script type="text/javascript" src="/components/socket.io-client/dist/socket.io.js"></script>
+    
+    <!-- Gmap -->
+    <script type="text/javascript" src="/js/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap"
+    async defer></script>
+
     <script type="text/javascript">  
         var socket = io.connect('http://localhost:8080/');
         console.log(socket);
