integration maquette vendredi

--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -1,38 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-  	<meta charset="UTF-8">
-    	<title><%= title %></title>
-		<title>Connexion</title>
-    <link rel='stylesheet' href='/stylesheets/stylePageLogin.css' />
-    <link rel='stylesheet prefetch' href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css'>
-  </head>
-
-
-  <body>
-
-    <h1 class='titreLogo'> Pimp My road </h1>
-        <div class="wrapper">
-          <form class="connexion-form-signin">       
-            <h2 class="connexion-form-signin-heading">Connexion</h2>
-              <input type="text" class="form-control" name="username" placeholder="Adresse mail ou identifiant" required="" autofocus="" />
-              <input type="password" class="form-control" name="password" placeholder="Mots de passe" required=""/>      
-              <label class="connexion-checkbox">
-                <input type="checkbox" value="remember-me" id="connexionrememberMe" name="rememberMe"> Se souvenir de moi
-              </label>
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Envoyer</button>   
-              <a class='lienCreationCompte' href="/creationCompte" target="_blank"> Inscription </a>
-          </form>
-          
-        </div>
-        
-  </body>
-</html>
-
-
- 
-
-  
-
-
-
+<div class="page-wrap">
+        <button id="menu-toggle"></button>
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">TRAJETS</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <div id="contenufonctionnalitemaps"></div>
+            <div id="gmap"></div>
+            
+</div>
+</div>
