--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -76,6 +76,47 @@
     <!-- Custom Theme JavaScript -->
     <script type="text/javascript" src='/js/sb-admin-2.js'></script>
     <script type="text/javascript" src='/js/layout.js'></script>
+
+     <!-- Gmap -->
+    <script type="text/javascript" src="/js/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap"
+    async defer></script>
+
+    <script type="text/javascript">  
+        var socket = io.connect('http://localhost:8080/');
+        console.log(socket);
+        socket.on('connect', function(data) {
+            socket.emit('join', 'Hello World from client');
+
+        });
+        socket.on('messages', function(data) {
+                alert(data);
+        });
+
+
+        var options = {
+          enableHighAccuracy: true,
+          timeout: 3000,
+          maximumAge: 0
+        };
+
+        function success(pos) {
+          var crd = pos.coords;
+
+          console.log('Your current position is:');
+          console.log(`Latitude : ${crd.latitude}`);
+          console.log(`Longitude: ${crd.longitude}`);
+          console.log(`More or less ${crd.accuracy} meters.`);
+
+          socket.emit('localization', {lat: crd.latitude, lon: crd.longitude});
+        };
+
+        function error(err) {
+          console.warn(`ERROR(${err.code}): ${err.message}`);
+        };
+
+        window.navigator.geolocation.watchPosition(success, error, options);
+    </script>
 </body>
 
 </html>
