--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,11 +27,21 @@
 <!-- Custom CSS -->
     <link rel='stylesheet' href='/stylesheets/stylePageTrajets.css'>
 
+    <!-- Custom CSS -->
+    <link rel='stylesheet' href='/stylesheets/stylePageMeteo.css'>
+
     <!-- Morris Charts CSS -->
     <link rel='stylesheet' href='/components/morris.js/morris.css'>
 
     <!-- Custom Fonts -->
     <link rel='stylesheet' href='/components/font-awesome/css/font-awesome.min.css' type="text/css">
+
+     <!-- DataTables CSS -->
+    <link href="/components/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
+
+    <!-- DataTables Responsive CSS -->
+    <link href="/components/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -76,6 +86,7 @@
     <!-- Custom Theme JavaScript -->
     <script type="text/javascript" src='/js/sb-admin-2.js'></script>
     <script type="text/javascript" src='/js/layout.js'></script>
+    <script type="text/javascript" src='/js/playlist.js'></script>
 </body>
 
 </html>
