Fix conf serveur to personize

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,12 +60,12 @@
                         <h2>John D.</h2>
                 </header>
         <ul>
-            <li><a href="Accueil">Accueil</a></li>
-            <li><a href="vos-trajets">Vos trajets</a></li>
-            <li><a href="meteo/">Votre météo</a></li>
-            <li><a href="votre-playlist-Spotify">Vos playlist Spotify</a></li>
-            <li><a href="vos-articles">Vos articles</a></li>
-            <li><a href="vos-visites">Vos visites</a></li>
+            <li><a href="/Accueil/">Accueil</a></li>
+            <li><a href="/trajet/">Vos trajets</a></li>
+            <li><a href="/meteo/">Votre météo</a></li>
+            <li><a href="/votre-playlist-Spotify/">Vos playlist Spotify</a></li>
+            <li><a href="/vos-articles/">Vos articles</a></li>
+            <li><a href="/vos-visites/">Vos visites</a></li>
         </ul>
     </nav>
     <%-body%>
