--- a/app/src/css/stylePageTrajets.css
+++ b/app/src/css/stylePageTrajets.css
@@ -1,12 +1,27 @@
 div#gmap {
 	max-width: 100%;
 	height: 99vh;
-	background-color: red;	
+	background-color: red;
 	width: auto;
 	max-height: 500px;
 	border: black 2px solid;
 
 	}
+
+#floating-panel {
+    position: absolute;
+    top: 10px;
+    left: 25%;
+    z-index: 5;
+    background-color: #fff;
+    padding: 5px;
+    border: 1px solid #999;
+    text-align: center;
+    font-family: 'Roboto','sans-serif';
+    line-height: 30px;
+    padding-left: 10px;
+  }
+
 div#contenufonctionnalitemaps {
 	max-width: 20%;
 	height: 500px;
