--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -4,11 +4,11 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">VOS TRAJETS</h1>
+                    <a href="/trajet/creation/">Création</a>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
             <div id="contenufonctionnalitemaps"></div>
-            <div id="gmap"></div>
-            
+
 </div>
 </div>
