--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,7 +93,7 @@
 
      <!-- Gmap -->
     <script type="text/javascript" src="/js/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places"
     async defer></script>
 
     <script type="text/javascript">
