Spotify profile link + front - get playlist of connected + auth workflow with spotify

--- a/app/src/css/stylePageTrajets.css
+++ b/app/src/css/stylePageTrajets.css
@@ -33,3 +33,13 @@ div#contenufonctionnalitemaps {
 	border: black 2px solid;
 
 }
+
+ #login, #loggedin {
+        display: none;
+      }
+      .text-overflow {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 500px;
+      }
