--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -63,7 +63,7 @@
             <li><a href="/Accueil/">Accueil</a></li>
             <li><a href="/trajet/">Vos trajets</a></li>
             <li><a href="/meteo/">Votre météo</a></li>
-            <li><a href="/votre-playlist-Spotify/">Vos playlist Spotify</a></li>
+            <li><a href="/spotify/playlists/">Vos playlist Spotify</a></li>
             <li><a href="/vos-articles/">Vos articles</a></li>
             <li><a href="/vos-visites/">Vos visites</a></li>
         </ul>
