--- a/views/creationTrajet.ejs
+++ b/views/creationTrajet.ejs
@@ -27,94 +27,67 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+
+                 <video width="320" height="240" controls>
+                  <source src="/video.mp4" type="video/mp4">
+                  <source src="/video.ogg" type="video/ogg">
+                Your browser does not support the video tag.
+                </video>
+                <button id="start-button">Start Listening</button>
+                <h1>🎤 Speak in english</h1>
+                <p class="support">See browser support in <a href="http://caniuse.com/#search=speech">
+                    Can I Use</a>
+                </p>
+                <div class="phrases"></div>
+
+
+            </div>
 
     </div>
 </div>
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
- <video width="320" height="240" controls>
-  <source src="/video.mp4" type="video/mp4">
-  <source src="/video.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-<button id="start-button">Start Listening</button>
-<div id="demo-echo"></div>
+<script type="text/javascript">
+const phrases = document.querySelector('.phrases');
 
-</body>
-<script src="/components/annyang/dist/annyang.min.js"></script>
-<script>
-if (annyang) {
-      // Let's define our first command. First the text we expect, and then the function it should call
-    var commands = {
-        'play video': function() {
-            document.querySelector('video').play();
-        },
-        'pause video': function() {
-            document.querySelector('video').pause();
-        },
-        '* video': function(word) {
-            if(word === 'play') {
-                document.querySelector('video').play();
-            }
-            else if(word === 'pause' || word === 'stop') {
-                document.querySelector('video').pause();
-            }
-        }
-    };
+window.SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 
-    // Add our commands to annyang
-    annyang.addCommands(commands);
+if (window.SpeechRecognition) {
+  const recognition = new SpeechRecognition();
+  recognition.lang = 'fr-FR';
+  recognition.interimResults = true;
 
-// Start listening. You can call this here, or attach this call to an event, button, etc.
-annyang.start();
+  recognition.addEventListener('result', e => {
+    const textResult = Array.from(e.results)
+        .map(result => result[0])
+        .map(result => result.transcript)
+        .join('');
+
+    if (e.results[0].isFinal) {
+        const p = document.createElement('p');
+        p.innerHTML = `<span>🗣</span> ${textResult}`;
+        phrases.appendChild(p);
+
+        const ssu = new SpeechSynthesisUtterance();
+        ssu.text = textResult;
+        ssu.rate = 0.8;
+        ssu.pitch = 0;
+        speechSynthesis.speak(ssu);
+    }
+  });
+
+  recognition.addEventListener('end', recognition.start);
+
+  recognition.start();
+} else {
+  document.querySelector('body').textContent = '😩 Your browser doesn\'t support Speech Recognition.';
 }
+
 </script>
 
-  <script type="text/javascript">
-    function startListening() {
-        var recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition || window.mozSpeechRecognition || window.msSpeechRecognition)();
-        recognition.lang = 'en-US';
-        recognition.interimResults = false;
-        recognition.maxAlternatives = 1;
-        recognition.start();
 
-        [
-         'onaudiostart',
-         'onaudioend',
-         'onend',
-         'onerror',
-         'onnomatch',
-         'onresult',
-         'onsoundstart',
-         'onsoundend',
-         'onspeechend',
-         'onstart'
-        ].forEach(function(eventName) {
-            recognition[eventName] = function(e) {
-                console.log(eventName, e);
-            };
-        });
-
-        document.querySelector('#start-button').innerHTML = 'Listening...';
-
-        recognition.onend = function() {
-            document.querySelector('#start-button').innerHTML = 'Start Listening';
-        };
-        recognition.onresult = function() {
-            document.querySelector('#demo-echo').textContent = event.results[0][0].transcript;
-        };
-    };
-
-    (function() {
-        document.querySelector('#start-button').addEventListener('click', startListening);
-    })();
-</script>
-
-</html>
-
-
+     <!-- Gmap -->
+    <script type="text/javascript" src="/js/map.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places"
+    async defer></script>
