--- a/views/creationTrajet.ejs
+++ b/views/creationTrajet.ejs
@@ -30,3 +30,6 @@
 
     </div>
 </div>
+`
+<script type="text/javascript" src="/js/map.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places" async defer></script>
