--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+<%-include('scripts');%>
 </head>
 
 <body>
@@ -68,67 +68,9 @@
             <li><a href="/vos-visites/">Vos visites</a></li>
         </ul>
     </nav>
-    <%-body%>
+ <%-body%>   
 
-    <!-- jQuery -->
-    <script type="text/javascript" src='/components/jquery/dist/jquery.min.js'></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script type="text/javascript" src='/components/bootstrap/dist/js/bootstrap.min.js'></script>
-
-    <!-- Metis Menu Plugin JavaScript -->
-    <script type="text/javascript" src='/components/metisMenu/dist/metisMenu.min.js'></script>
-
-    <!-- Morris Charts JavaScript -->
-    <script type="text/javascript" src='/components/raphael/raphael.min.js'></script>
-    <script type="text/javascript" src='/components/morris.js/morris.min.js'></script>
-
-    <!-- Socket io -->
-    <script type="text/javascript" src="/components/socket.io-client/dist/socket.io.js"></script>
-
-    <!-- Custom Theme JavaScript -->
-    <script type="text/javascript" src='/js/sb-admin-2.js'></script>
-    <script type="text/javascript" src='/js/layout.js'></script>
-
-
-     <!-- Gmap -->
-    <script type="text/javascript" src="/js/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrvc135P6W5lV0mNykc7S4-1IOWzCCjac&callback=initMap&libraries=places"
-    async defer></script>
-
-    <script type="text/javascript">
-        var socket = io.connect('http://localhost:8080/');
-        socket.on('error', function (error) {
-            console.log("Server return error :" + error);
-        });
-
-        var options = {
-          enableHighAccuracy: true,
-          timeout: 5000,
-          maximumAge: 0
-        };
-
-        function success(pos) {
-          var crd = pos.coords;
-
-          console.log('Your current position is:');
-          console.log(`Latitude : ${crd.latitude}`);
-          console.log(`Longitude: ${crd.longitude}`);
-          console.log(`More or less ${crd.accuracy} meters.`);
-
-          socket.emit('localization', {lat: crd.latitude, lon: crd.longitude});
-          socket.on('dataMeteo', function (data) {
-            console.log(data);
-          })
-        };
-
-        function error(err) {
-          socket.emit('localization', {err: `ERROR(${err.code}): ${err.message}` });
-          console.warn(`ERROR(${err.code}): ${err.message}`);
-        };
-
-        window.navigator.geolocation.getCurrentPosition(success, error, options);
-    </script>
+    
 
 </body>
 
