--- a/views/trajets.ejs
+++ b/views/trajets.ejs
@@ -5,9 +5,98 @@
                 <div class="col-lg-12">
                     <h1 class="page-header">VOS TRAJETS</h1>
                     <a href="/trajet/creation/">Création</a>
+
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+
+
+<!--<%= JSON.stringify(trajets) %>-->
+        <div id="page-wrapper">
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Listes de vos trajets
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                    <tr>
+                                        <th>Nom du trajet</th>
+                                        <th>Historique des visites</th>
+                                        <th>Paramètres</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <% trajets.forEach(function(info) { %>
+                                    <tr class="odd gradeX">
+                                        <td><%= info.nom %></td>
+                                        <td><%= info.parcours %></td>
+                                        <td class="center">
+                                            <button type="button" class="btn btn-primary">Supprimer</button>
+                                        </td>
+                                    </tr>                                  
+                                    <% }); %>
+                                    <!-- <tr class=" gradeC">
+                                        <td>Trident</td>
+                                        <td>Internet Explorer 5.0</td>
+                                        <td class="center"><button type="button" class="btn btn-primary">Supprimer</button></td>
+                                    </tr>
+                                    <tr class="odd gradeA">
+                                        <td>Trident</td>
+                                        <td>Internet Explorer 5.5</td>
+                                        <td class="center"><button type="button" class="btn btn-primary">Supprimer</button></td>
+                                    </tr> -->
+                                    
+                                </tbody>
+                            </table>
+        </div>
+        <!-- /#page-wrapper -->
+        <form action="/spotify/playlists" method="POST" role="form">
+            <legend>Form title</legend>
+
+            <div class="form-group">
+                <label for="">Nom playlist : </label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Nom playlist">
+            </div>
+
+
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <!-- /#wrapper -->
+
+
+
+    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script type='text/javascript'>
+    $(document).ready(function() {
+        $('#dataTables-example').DataTable({
+            responsive: true
+        });
+    });
+
+    </script>
+
+            </div>
+
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
             <div id="contenufonctionnalitemaps"></div>
 
         </div>
