--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -42,6 +42,8 @@
     <!-- DataTables Responsive CSS -->
     <link href="/components/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
+    <link rel='stylesheet' href='/stylesheets/stylePageCreationLogin.css' />
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
