--- a/views/meteo.ejs
+++ b/views/meteo.ejs
@@ -8,15 +8,56 @@
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
+
+
+
+        <div id="page-wrapper">
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Votre météo
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                <thead>
+                                    <tr>
+                                        <th>Nom du trajet</th>
+                                        <th>Historique des visites</th>
+                                        <th>Paramètres</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                 
+                                    <!-- <tr class=" gradeC">
+                                        <td>Trident</td>
+                                        <td>Internet Explorer 5.0</td>
+                                        <td class="center"><button type="button" class="btn btn-primary">Supprimer</button></td>
+                                    </tr>
+                                    <tr class="odd gradeA">
+                                        <td>Trident</td>
+                                        <td>Internet Explorer 5.5</td>
+                                        <td class="center"><button type="button" class="btn btn-primary">Supprimer</button></td>
+                                   </tr> -->                                    
+                                </tbody>
+                            </table>
+        </div>
+
+            </div>
+
+</div>
+</div>
+
             <div id="contenumeteo"></div>
             
 </div>
 </div>
 
 
-
     <script type="text/javascript">
-        var socket = io.connect('http://127.0.0.1:8080/');
+        var socket = io.connect('http://localhost:8080/');
         socket.on('error', function (error) {
             console.log("Server return error :" + error);
         });
@@ -46,7 +87,6 @@
           console.warn(`ERROR(${err.code}): ${err.message}`);
         };
 
-
 		if ("geolocation" in navigator) {
 		  /* géolocalisation possible */
     		navigator.geolocation.getCurrentPosition(success, error, options);
@@ -54,3 +94,5 @@
 		  alert("Le service de géolocalisation n'est pas disponible sur votre ordinateur.");
 		}
     </script>
+
+
