Work on Playlists

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,6 +30,8 @@
     <!-- Custom CSS -->
     <link rel='stylesheet' href='/stylesheets/stylePageMeteo.css'>
 
+    <link rel='stylesheet' href='/stylesheets/stylePagePlaylist.css'>
+
     <!-- Morris Charts CSS -->
     <link rel='stylesheet' href='/components/morris.js/morris.css'>
 
@@ -70,9 +72,9 @@
             <li><a href="/vos-visites/">Vos visites</a></li>
         </ul>
     </nav>
- <%-body%>   
+ <%-body%>
 
-    
+
 
 </body>
 
