--- a/views/dashboardAccueil.ejs
+++ b/views/dashboardAccueil.ejs
@@ -1,23 +1,17 @@
 
 <div class="page-wrap">
         <button id="menu-toggle"></button>
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">ACCUEIL</h1>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
+        <div id="page-wrapper" class="container">
             <!-- /.row -->
             <div class="row">
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-primary">
+                    <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
+                                <div class="col-xs-12 info-ico">
                                     <i class="fa fa-comments fa-5x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
+                                <div class="col-xs-12 text-center info-badge">
                                     <div class="huge">26</div>
                                     <div>Trajets</div>
                                 </div>
@@ -33,13 +27,13 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-green">
+                    <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
+                                <div class="col-xs-12 info-ico">
                                     <i class="fa fa-tasks fa-5x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
+                                <div class="col-xs-12 text-center info-badge">
                                     <div class="huge">Soleil</div>
                                     <div>Météo</div>
                                 </div>
@@ -55,13 +49,13 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-yellow">
+                    <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
+                                <div class="col-xs-12 info-ico">
                                     <i class="fa fa-shopping-cart fa-5x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
+                                <div class="col-xs-12 text-center info-badge">
                                     <div class="huge">20</div>
                                     <div>Titre écouté cette semaine</div>
                                 </div>
@@ -77,13 +71,13 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-red">
+                    <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
+                                <div class="col-xs-12 info-ico">
                                     <i class="fa fa-support fa-5x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
+                                <div class="col-xs-12 text-center info-badge">
                                     <div class="huge">10</div>
                                     <div>articles consulté cette semaine</div>
                                 </div>
@@ -98,16 +92,14 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="row">
                 <div class="col-lg-3 col-md-6">
-                    <div class="panel panel-primary">
+                    <div class="panel">
                         <div class="panel-heading">
                             <div class="row">
-                                <div class="col-xs-3">
+                                <div class="col-xs-12 info-ico">
                                     <i class="fa fa-comments fa-5x"></i>
                                 </div>
-                                <div class="col-xs-9 text-right">
+                                <div class="col-xs-12 text-center info-badge">
                                     <div class="huge">20</div>
                                     <div>Visite cette semaine</div>
                                 </div>
@@ -122,6 +114,7 @@
                         </a>
                     </div>
                 </div>
+
             </div>
             <!-- /.row -->
     </div>
